@@ -34,7 +34,7 @@
         </select>
         <button data-im="_@update:postalcode">search</button>
     </div>
-    <div id="IM_NAVIGATOR">Navigation Controls by INTER-Mediator</div>
+    <div class="IM_NAVIGATOR">Navigation Controls by INTER-Mediator</div>
     <table border="1" id="resultTable">
         <thead>
         <tr>
@@ -70,6 +70,7 @@
         </tr>
         </tbody>
     </table>
+    <div class="IM_NAVIGATOR">Navigation Controls by INTER-Mediator</div>
 </div>
 <footer>
     <small>INTER-Mediator ©2019</small>
